--- a/udacity-c3-deployment/k8s/aws-secret.yaml
+++ b/udacity-c3-deployment/k8s/aws-secret.yaml
@@ -1,7 +1,7 @@
-apiVersion: v1
+1apiVersion: v1
 kind: Secret
 metadata:
   name: aws-secret
 type: Opaque
 data:
-  credentials: ___INSERT_AWS_CREDENTIALS_FILE__BASE64____ 
+  credentials: W2RlZmF1bHRdCmF3c19hY2Nlc3Nfa2V5X2lkID0gQUtJQTJENVpDU1oyS01YN1BDTzMKYXdzX3NlY3JldF9hY2Nlc3Nfa2V5ID0gRlBNYy9PMDYwMFVoMFRHY2p2NWdMeXc4dUNvWWhnRXozeUZwMWNidwo= 
