--- a/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
+++ b/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
@@ -12,7 +12,7 @@ spec:
         service: reverseproxy
     spec:
       containers:
-      - image: scheele/reverseproxy
+      - image: gauravg21/reverseproxy
         name: reverseproxy
         imagePullPolicy: Always          
         resources:
