--- a/udacity-c3-frontend/Dockerfile
+++ b/udacity-c3-frontend/Dockerfile
@@ -1,5 +1,5 @@
 ## Build
-FROM beevelop/ionic AS ionic
+FROM beevelop/ionic:v5.2.3 AS ionic
 # Create app directory
 WORKDIR /usr/src/app
 # Install app dependencies
@@ -15,4 +15,3 @@ RUN ionic build
 FROM nginx:alpine
 #COPY www /usr/share/nginx/html
 COPY --from=ionic  /usr/src/app/www /usr/share/nginx/html
-
